--- a/config.ini
+++ b/config.ini
@@ -8,4 +8,4 @@ pass = root
 [youtubeAPI]
 api_service_name = youtube
 api_version = v3
-api_Key = AIzaSyAAeeQ3IOTY65dLQgRc3YG_xNVoq7vJTmo
+api_Key = PASTE_YOUR_API_HERE
